# Ragaik

./: .gitignore  .gitmodules  RAI_train_YOLO.ipynb  README.md  pyproject.toml  requirements.txt  test.tsv
RAG/: app.py  config.py  datastore.py  generator.py  load.py  loader.py  make_retriver_cache.py  manager.py  pyproject.toml  requirements.in  retriever.py  vectorizer_dataset_preparation.ipynb
RAG/_expirements/: helpful.ipynb  load_local.py  metrics_testing.py  retriever_testing.py  testing.py
RAG/application/: deps.py
RAG/domain/: chunk.py  chunk_repo_ensemble.py  context_service.py  model_chat_service.py  service.py
RAG/infrastructure/: chunker.py  embedder.py  ollama_llm_chat_adapter.py  recursive_chunker.py  token_chunker.py
RAG/model/: chunk.py  datastore.py  embedder.py  generator.py  manager.py  retriever.py  service.py
RAG/tests/: BM25EnsembleRetriever_Phi4_res.xlsx  FaissAndBM25EnsembleRetriever_Phi35_res.xlsx  FaissAndBM25EnsembleRetriever_Phi4_res.xlsx  load_documents.py  load_local.py  metrics_testing.py  questions.md  retriever_testing.py  single_test.py
character_recognition/notebooks/: Roboflow_inference.ipynb  detection_generator.ipynb  latex_recognition_baseline.ipynb  ocr_router.ipynb  recognition_ensembling.ipynb  ru_ocr_baseline.ipynb  text_concatenation.ipynb  train_YOLO.ipynb
character_recognition/scripts/: detection_generator.py  latex_ocr_model.py  ru_ocr_folder.py
resources/photos/: phot_text_content.csv
segmentation_dataset/: .gitignore  generator.ipynb
web/frontend/: package.json  tailwind.config.js
(+27 files in other folders)
