[project]
name = "ai-khrabrov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "faiss-cpu>=1.11.0",
    "fastapi[standard]>=0.115.12",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "langchain[ollama]>=0.3.25",
    "ragas>=0.2.15",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
